syntax = "proto3";
option java_package = "com.ubtechinc.alpha";

message CmInstallAppRequest {

    string packageName = 1;
    string name = 2;
    string appKey = 3;
    string url = 4;
}

message CmInstallAppResponse {
     bool isSuccess = 1;
    int32 resultCode = 2;

}

